Checkstyle fixes in the main package